# lipid_identification

./: .gitignore  README.md  pyproject.toml
docs/: proposed_problem.md  report.md
notebooks/: 00_dataset_eda.ipynb  01_benchmark_baselines.ipynb  02_benchmark_pretrained.ipynb  03_training_analysis.ipynb  04_final_comparison.ipynb
scripts/: benchmark.py  dataset_analysis_basic.py  precompute_embeddings.py
src/: benchmark.py  constants.py  identify.py
src/models/: __init__.py  classical.py  dreams_pipeline.py  mol_encoder.py  registry.py  reranker.py  spectral_graph_encoder.py
src/train/: train_encoder.py  train_reranker.py
src/utils/: indexing.py  logging.py  metrics.py  spectrum.py
tests/: test_consolidation.py  test_utils.py
